[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dmitry chmerenko <dchmerenko@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
